--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </h1>
         <div class="time flex flex-col gap-y-[5px] pl-[20px] mb-[20px]">
           <div class="flex flex-col">
-            <span> <b>Thời gian:</b> 08h30-11h00, Thứ Tư, </span>
+            <span> <b>Thời gian:</b> 09:30 - 11:40, Thứ Tư, </span>
             <span>27/04/2022 </span>
           </div>
           <span> <b>Nền tảng:</b> Zoom Webinar </span>
