--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div>
                   <span> <b>Phát biểu khai mạc</b> </span>
                   <div class="flex flex-col">
-                    <span class="italic"> Ông Phùng Phước Lin </span>
+                    <span class="italic"> Ông Phùng Phước Linh </span>
                     <span class="italic">
                       Giám đốc Sản phẩm và dịch vụ - HPE Việt Nam
                     </span>
