--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div>
           <span class="text-justify block">
             Với nhiều thập kỷ kinh nghiệm trong cung cấp các dịch vụ và giải
-            pháp tư vấn cho các khách hàng-đối tác toàn cầu, HPE đã liên tục
+            pháp tư vấn cho các khách hàng - đối tác toàn cầu, HPE đã liên tục
             nghiên cứu phát triển danh mục đầu tư phong phú các dịch vụ đám mây
             cung cấp từ biên mạng đến với co-location và trung tâm dữ liệu. Với
             <span class="text-[#01a982]">HPE GreenLake</span>, chúng tôi tự tin
@@ -152,7 +152,7 @@
           </thead>
           <tbody>
             <tr>
-              <td class="tg-0pky"><b>09.30 – 09.40</b></td>
+              <td class="tg-0pky"><b>09:30 – 09:40</b></td>
               <td class="tg-0pky">
                 <div>
                   <span> <b>Phát biểu khai mạc</b> </span>
@@ -166,7 +166,7 @@
               </td>
             </tr>
             <tr>
-              <td class="tg-0pky"><b>09.40 – 10.10</b></td>
+              <td class="tg-0pky"><b>09:40 – 10:10</b></td>
               <td class="tg-0pky">
                 <div>
                   <span>
@@ -182,7 +182,7 @@
               </td>
             </tr>
             <tr>
-              <td class="tg-0pky"><b>10.10 – 10.50</b></td>
+              <td class="tg-0pky"><b>10:10 – 10:50</b></td>
               <td class="tg-0pky">
                 <div>
                   <span>
@@ -198,7 +198,7 @@
               </td>
             </tr>
             <tr>
-              <td class="tg-0pky"><b>10.50 – 11.10</b></td>
+              <td class="tg-0pky"><b>10:50 – 11:10</b></td>
               <td class="tg-0pky">
                 <div>
                   <span>
@@ -215,7 +215,7 @@
               </td>
             </tr>
             <tr>
-              <td class="tg-0pky"><b>11.10 – 11.40</b></td>
+              <td class="tg-0pky"><b>11:10 – 11:40</b></td>
               <td class="tg-0pky">
                 <div>
                   <span> <b>Hỏi đáp</b> </span>
@@ -223,7 +223,7 @@
               </td>
             </tr>
             <tr>
-              <td class="tg-0pky"><b>11.40</b></td>
+              <td class="tg-0pky"><b>11:40</b></td>
               <td class="tg-0pky">
                 <div>
                   <span> <b>Kết thúc chương trình</b> </span>
@@ -241,7 +241,7 @@
           chuyện với đội ngũ chuyên gia đầu ngành, tìm hiểu về sức mạnh, tốc độ
           và tính linh hoạt của đám mây công cộng được triển khai dưới dạng dịch
           vụ trong trung tâm dữ liệu của doanh nghiệp và được quản lý chuyên
-          nghiệp bởi nền tảng HPE GreenLake
+          nghiệp bởi nền tảng HPE GreenLake.
         </span>
       </div>
       <div class="my-[30px]">
